k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capiot-ingress
  namespace: capiot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - flamware.work
      secretName: capiot-tls-secret
  rules:
    # 1. Règle pour mqtt.flamware.work (pour le challenge ACME)
    - host: mqtt.flamware.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    # 2. Règle pour flamware.work
    - host: flamware.work # ⬅️ L'INDENTATION EST ALIGNÉE AVEC LA RÈGLE PRÉCÉDENTE
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /influxdb
            pathType: Prefix
            backend:
              service:
                name: api-influxdb-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
